@@ -1,0 +1,1 @@
+build/grub-rescue-efi-amd64/grub-rescue-cdrom.iso	usr/lib/grub-rescue-efi-amd64
