@@ -1,0 +1,3 @@
+# Truth would be uselessly confusing for users.  Let's give 'em what they
+# wanted instead.
+usr/lib/grub-rescue-efi-amd64/grub-rescue-cdrom.iso	usr/lib/grub-rescue-efi-amd64/grub-rescue-usb.img
